# MotionFX

./: apply_block3.py  apply_block4.py
.github/workflows/: build.yml
MotionFX_source/: CHANGELOG.md  CMakeLists.txt  THIRD_PARTY_LICENSES.md
MotionFX_source/Source/: FactoryPresets.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StateHistory.h
MotionFX_source/Source/DSP/: DriveEffect.h  DspUtils.h  EffectChain.h  FilterEffect.h  Modulation.h  PanEffect.h  RetroEffect.h  SpaceEffect.h  StutterEngine.h  VolumeEffect.h  WidthEffect.h
MotionFX_source/Source/GUI/: AccessibilityDialog.h  DrivePhasePanel.h  EffectPanel.h  HeaderComponents.h  LookAndFeel.h  RetroLabPanel.h  StutterPanel.h  TabStrip.h  Theme.h  ValueFormatting.h  Widgets.h
MotionFX_source/Source/Tests/: AudioIntegrityTest.cpp  GuiResizeTest.cpp
motionfx_block3/: README_BLOCK3.md
